--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "bcrypt": "^1.0.1",
     "hapi": "^16.0.2",
     "hapi-auth-jwt2": "^7.2.4",
-    "inert": "^4.0.4"
+    "inert": "^4.0.4",
+    "joi": "^10.1.0",
+    "jsonwebtoken": "^7.2.1"
   }
 }
